--- a/ATISMobile/ATISMobile.Android/Properties/AndroidManifest.xml
+++ b/ATISMobile/ATISMobile.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="8" android:versionName="8" package="ATISMobile.ATISMobile" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="14" android:targetSdkVersion="27" />
+	<uses-sdk android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.DELETE_PACKAGES" />
 	<uses-permission android:name="android.permission.DELETE_CACHE_FILES" />
 	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
