--- a/ATISMobile/ATISMobile/ATISMobile.csproj
+++ b/ATISMobile/ATISMobile/ATISMobile.csproj
@@ -43,7 +43,13 @@
     <EmbeddedResource Update="MobileEntryPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="MoneyWalletPage.xaml">
+    <EmbeddedResource Update="MoneyWalletChargingPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="MoneyWalletMenuPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="MoneyWalletTransactionsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Properties\Resources.resx">
@@ -73,9 +79,6 @@
   <ItemGroup>
     <Compile Update="MenuPage.xaml.cs">
       <DependentUpon>MenuPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Update="MoneyWalletPage.xaml.cs">
-      <DependentUpon>MoneyWalletPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
