--- a/ATISMobile/ATISMobile.Android/ATISMobile.Android.csproj
+++ b/ATISMobile/ATISMobile.Android/ATISMobile.Android.csproj
@@ -149,5 +149,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\BG993.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\BG42108.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
