--- a/ATISMobile/ATISMobile/ATISMobile.csproj
+++ b/ATISMobile/ATISMobile/ATISMobile.csproj
@@ -59,6 +59,9 @@
     <EmbeddedResource Update="ProvinceSelectionPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Reports\View1.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="StartPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
