--- a/ATISMobile/ATISMobile.Android/ATISMobile.Android.csproj
+++ b/ATISMobile/ATISMobile.Android/ATISMobile.Android.csproj
@@ -152,5 +152,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\BG42108.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Truck.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\TruckDark.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
