--- a/ATISMobile/ATISMobile.Android/ATISMobile.Android.csproj
+++ b/ATISMobile/ATISMobile.Android/ATISMobile.Android.csproj
@@ -137,10 +137,10 @@
     <AndroidResource Include="Resources\drawable\ScrollUp.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\C.jpg" />
+    <AndroidResource Include="Resources\drawable\TruckNewLight.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\CDark.jpg" />
+    <AndroidResource Include="Resources\drawable\TruckNewLightDark.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
