--- a/ATISMobile/ATISMobile.Android/Properties/AndroidManifest.xml
+++ b/ATISMobile/ATISMobile.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="10" android:versionName="10" package="ATISMobile.ATISMobile" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="10" android:versionName="3" package="ATISMobile.ATISMobile" android:installLocation="preferExternal">
 	<uses-sdk android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.DELETE_PACKAGES" />
 	<uses-permission android:name="android.permission.DELETE_CACHE_FILES" />
